--- a/src/main/webapp/Views/nuevaVenta.xhtml
+++ b/src/main/webapp/Views/nuevaVenta.xhtml
@@ -22,10 +22,10 @@
                         <p:panel header="Cliente" >
                             <h:panelGrid columns="4" width="50%" >
                                 <p:outputLabel value="Identificación: "/>
-                                <p:inputText id="IdCliente" value="" />
+                                <p:inputText id="IdNumCliente" value="#{VentaMB.idNumCliente}" />
                                 <p:outputLabel value="Nombre: "/>
-                                <p:inputText id="NombreCliente" value="" disabled="true" />
-                                <p:button value="Buscar" />
+                                <p:inputText id="NombreCliente" value="#{VentaMB.nombreCliente}" disabled="true" />
+                                <p:commandButton actionListener="#{VentaMB.buscarCliente}" value="Buscar" />
                             </h:panelGrid>
                         </p:panel>
 
