--- a/src/main/webapp/Views/nuevaVenta.xhtml
+++ b/src/main/webapp/Views/nuevaVenta.xhtml
@@ -28,9 +28,9 @@
                                 <p:commandButton actionListener="#{VentaMB.BuscarClienteVenta}" value="Buscar" update="ventaForm" />
                             </h:panelGrid>
                         </p:panel>
-                        
-                        
-                        <p:panel header="Búsqueda de productos" style="widht: 45%; position: relative" >
+
+
+                        <p:panel id="busquedaProductoPanel" header="Búsqueda de productos" style="widht: 45%; position: relative" >
                             <h:panelGrid columns="3">
                                 <p:outputLabel value="Codigo: "/>
                                 <p:inputText id="ItemCodigo" value="#{VentaMB.codigoProducto}" />
@@ -47,7 +47,7 @@
                                 <p:outputLabel value="Cantidad: "/>
                                 <p:inputNumber value="#{VentaMB.cantidad}" modifyValueOnWheel="true" />
                                 <div/>
-                                <p:commandButton value="Agregar" actionListener="#{VentaMB.AgregarProductoLista}" update="itemsTable" />
+                                <p:commandButton value="Agregar" actionListener="#{VentaMB.AgregarProductoLista}" update="itemsTable busquedaProductoPanel" />
                             </h:panelGrid>
                         </p:panel>
                     </div>
@@ -62,25 +62,33 @@
                         <p:column headerText="Cod">
                             <h:outputText value="#{ListaItems.producto.codigoAux}" />
                         </p:column>
-                        
+
                         <p:column headerText="Producto" >
                             <h:outputText value="#{ListaItems.producto.descripcion}" />
                         </p:column>
-                        
+
                         <p:column headerText="Precio Unitario">
-                            <h:outputText value="#{ListaItems.producto.precioUnitario}" />
+                            <h:outputText value="#{ListaItems.producto.precioUnitario}" >
+                                <f:convertNumber pattern="#0.00" />
+                            </h:outputText>
                         </p:column>
-                        
+
                         <p:column headerText="Descuento">
-                            <h:outputText value="#{ListaItems.producto.descuento}" />
+                            <h:outputText value="#{ListaItems.producto.descuento}" >
+                                <f:convertNumber pattern="#0.00" />
+                            </h:outputText>
                         </p:column>
-                        
+
                         <p:column headerText="Cantidad">
-                            <h:outputText value="#{ListaItems.cantidad}"/>
+                            <h:outputText value="#{ListaItems.cantidad}">
+                                <f:convertNumber pattern="#0.00" />
+                            </h:outputText>
                         </p:column>
-                        
+
                         <p:column headerText="Subtotal">
-                            <h:outputText value="#{ListaItems.subTotal}"/>
+                            <h:outputText value="#{ListaItems.subTotal}">
+                                <f:convertNumber pattern="#0.00" />
+                            </h:outputText>
                         </p:column>
 
                         <p:columnGroup type="footer">
