--- a/src/main/webapp/Views/nuevaProforma.xhtml
+++ b/src/main/webapp/Views/nuevaProforma.xhtml
@@ -43,7 +43,7 @@
                                 <p:inputText id="NombreProducto" value="#{VentaMB.nombreProducto}" disabled="true" />
                                 <div/>
                                 <p:outputLabel value="Precio: "/>
-                                <p:inputNumber id="priceTextBox" value="#{VentaMB.precioProducto}" modifyValueOnWheel="false" disabled="true" />
+                                <p:inputNumber id="priceTextBox" value="#{VentaMB.precioProducto}"/>
                                 <div/>
                                 <p:outputLabel value="Cantidad: "/>
                                 <p:inputNumber value="#{VentaMB.cantidad}" modifyValueOnWheel="true" />
