--- a/src/main/webapp/Views/Ventas/nuevaVenta.xhtml
+++ b/src/main/webapp/Views/Ventas/nuevaVenta.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <body>
-        <ui:composition template="./../Plantilla/Plantilla.xhtml">
+        <ui:composition template="../../Plantilla/Plantilla.xhtml">
 
             <ui:define name="content">
                 <h:form id="ventaForm">
